# AddImageFrame

./: .gitignore  CMakeLists.txt
include/ImageFrame/: Gui.h  ImgProcessing.h  build_defines.h.in  img_processing.h  ui.h
src/: Gui.cpp  ImgProcessing.cpp  img_processing.cpp  main.cpp  ui.cpp
ui/: mainwindow.ui
